components/longhorn/overlays/staging/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01-staging
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.staging.lab.supermorphic.com`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-dashboard-tls
